force-app/main/default/objects/Document_Central_Status_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Level__c</fullName>
        <label>Status Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under Review</fullName>
                    <default>true</default>
                    <label>Under Review</label>
                </value>
                <value>
                    <fullName>Needs Attention</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reviewed_Further Communication Needed</fullName>
                </value>
                <value>
                    <fullName>Default or Requested</fullName>
                </value>
                <value>
                    <fullName>Incomplete-Missing pages or sections</fullName>
                </value>
                <value>
                    <fullName>Invalid-Illegible</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Verified-No Documentation Available</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Invalid-Missing Information</fullName>
                </value>
                <value>
                    <fullName>Invalid-Missing Signature</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Exemption-MKV</fullName>
                </value>
                <value>
                    <fullName>Invalid-File Error</fullName>
                </value>
                <value>
                    <fullName>Received-Complete</fullName>
                </value>
                <value>
                    <fullName>Received-Incomplete</fullName>
                </value>
                <value>
                    <fullName>Received-No Documentation Available</fullName>
                </value>
                <value>
                    <fullName>Reviewed-Further Communication Needed</fullName>
                </value>
                <value>
                    <fullName>Verified-Complete</fullName>
                </value>
                <value>
                    <fullName>Verified-Incomplete</fullName>
                </value>
                <value>
                    <fullName>Invalid-Outdated</fullName>
                </value>
                <value>
                    <fullName>Incomplete-Missing information</fullName>
                </value>
                <value>
                    <fullName>Invalid-Reenrollment</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Awaiting IEP</fullName>
                </value>
                <value>
                    <fullName>Deferred-Extension Approved by Principal</fullName>
                </value>
                <value>
                    <fullName>Deferred-Incomplete-Allow</fullName>
                </value>
                <value>
                    <fullName>Deferred-Non-compliant Allow</fullName>
                </value>
                <value>
                    <fullName>Deferred-Verified-In progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Central Status Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Reason__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Document Central Status Mappings</pluralLabel>
</CustomObject>