force-app/main/default/objects/Document_Central_Status_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Reason__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>